Added Message on Index to Indicate Theres Something

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>This page isn't actually empty</h1>
+    <p>Fire up DevTools to see something</p>
     <script src="/scripts/index.js"></script>
   </body>
 </html>
